--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>spring-aop-performance-measurement</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>spring-aop-performance-measurement</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Demo project for performance measurement Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -22,6 +22,15 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
         <dependency>
